-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.2
-
None
-
d7fe948fd (dev), 157f7b47e (6.7), be274b528 (6.6)
If the compositor never reports a wl_data_device.motion outside the surface, a dragged toplevel will be re-attached to the parent even if the cursor at that point is far outside the parent.
When a wl_data_device.leave is received, a subsequent drop should behave independently of whether a motion outside the parent was reported.
Affected version is actually 6.6.3 but I cannot select it.