src/widgets/widgets/qmainwindow.cpp
@@ -1300,6 +1300,11 @@ bool QMainWindow::event(QEvent *event)
             event->accept();
             return true;
         }
+        case QEvent::DragLeave:
+            if (!d->layout->draggingWidget)
+                break;
+            d->layout->hover(d->layout->draggingWidget, pos() - QPoint(-1, -1));
+            return true;
 #endif
         default:
             break;
